--- a/Hyundai/index.html
+++ b/Hyundai/index.html
@@ -25,6 +25,11 @@
                     </ul>
                     <div class="gnb_dropdown">
                         <div class="dropdown_menu">
+                            <div class="etc_menu">
+                                <a href="#" class="etc_ico01">온라인 사전접수</a>
+                                <a href="#" class="etc_ico02">실시간 배송조회</a>
+                                <a href="#" class="etc_ico03">가이드북 다운로드</a>
+                            </div>
                             <ul class="menu01">
                                 <li class="menu_tit"><a href="#">베스트셀러</a></li>
                                 <li><a href="#">명인명촌</a></li>
@@ -37,16 +42,39 @@
                                 <li><a href="#">월드 그로서리</a></li>
                             </ul>  
                             <ul class="menu02">
-                                <li class="menu_tit"><a href="#">베스트셀러</a></li>
+                                <li class="menu_tit"><a href="#">현대특선</a></li>
+                                <li><a href="#">현대명품</a></li>
                                 <li><a href="#">명인명촌</a></li>
+                                <li><a href="#">1TABLE 선물 세트</a></li>
+                                <li><a href="#">연화식 선물 세트</a></li>
+                            </ul>   
+                            <ul class="menu03">
+                                <li class="menu_tit"><a href="#">테마추천</a></li>
+                                <li><a href="#">사랑하는 가족을 위한 선물</a></li>
+                                <li><a href="#">가성비 좋은 실속 선물</a></li>
+                                <li><a href="#">프리미엄 선물</a></li>
+                                <li><a href="#">환경까지 생각하는 선물</a></li>
+                                <li><a href="#">현대백화점에서만 만나볼 수 있는 선물</a></li>
+                                <li><a href="#">SNS 인기아이템</a></li>
+                            </ul>
+                            <ul class="menu04">
+                                <li class="menu_tit"><a href="#">신선식품</a></li>
                                 <li><a href="#">정육</a></li>
                                 <li><a href="#">과일</a></li>
                                 <li><a href="#">굴비, 해산물</a></li>
                                 <li><a href="#">곶감, 건과</a></li>
+                            </ul>
+                            <ul class="menu05">
+                                <li class="menu_tit"><a href="#">건강 &#183; 다과 &#183; 장 &#183; 주류</a></li>
                                 <li><a href="#">홍삼</a></li>
                                 <li><a href="#">주류</a></li>
+                                <li><a href="#">장, 기름, 젓갈</a></li>
+                                <li><a href="#">다과</a></li>
                                 <li><a href="#">월드 그로서리</a></li>
-                            </ul>       
+                            </ul>
+                            <ul class="menu06">
+                                <li class="menu_tit"><a href="#">상품권&#183;선물안내 </a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -61,6 +89,10 @@
             <div class="inner">
                 <div class="section_slide">
                     <img src="img/img_main_visual06.jpg" alt="">
+                    <div class="btn_wrap">
+                        <div class="btn_prev">Prev</div>
+                        <div class="btn_next">Next</div>     
+                    </div>
                 </div>
             </div>
         </div>
