베스트셀러

--- a/Hyundai/index.html
+++ b/Hyundai/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#">신선식품</a></li>
                         <li><a href="#">건강 &#183; 다과 &#183; 장 &#183; 주류</a></li>
                     </ul>
-                    <div class="gnb_dropdown">
+                    <div class="gnb_dropdown" style="display: none;">
                         <div class="dropdown_menu">
                             <div class="etc_menu">
                                 <a href="#" class="etc_ico01">온라인 사전접수</a>
@@ -86,15 +86,129 @@
             </div>
         </header>
         <div class="container">
-            <div class="inner">
-                <div class="section_slide">
-                    <img src="img/img_main_visual06.jpg" alt="">
-                    <div class="btn_wrap">
-                        <div class="btn_prev">Prev</div>
-                        <div class="btn_next">Next</div>     
-                    </div>
+            <div class="section_slide">
+                <img src="img/img_main_visual06.jpg" alt="">
+                <div class="btn_wrap">
+                    <div class="btn_prev">Prev</div>
+                    <div class="btn_next">Next</div>     
                 </div>
             </div>
+            <div class="section best_main">
+                <div class="inner">
+                    <h2><img src="img/tit_main_best01.png" alt="베스트셀러"></h2>
+                    <div class="prd_list">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/product01.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">16-01</div>
+                                        <div class="name">명인명촌 미본 선選</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>210,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>   
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/product02.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">37-01</div>
+                                        <div class="name">현대화식 한우 난蘭</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>540,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>   
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/product03.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">47-04</div>
+                                        <div class="name">현대명품 사과 &#183; 배 난蘭</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>160,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>   
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/product04.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">55-01</div>
+                                        <div class="name">영광 봄굴비 매梅</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>750,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>   
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/product05.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">68-06</div>
+                                        <div class="name">상주 특산 곶감 세트 매梅</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>150,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>   
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/product06.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">81-09</div>
+                                        <div class="name">정관장 홍삼정 에브리타임</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>96,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>   
+                                </a>
+                            </li>
+                        </ul>
+                    </div>  
+                    <div class="btn_area">
+                        <a href="#" class="btn_more">
+                            <span>더 보러가기</span>
+                        </a>
+                    </div>  
+                </div>
+            </div> 
         </div>
     </div>
 </body>
