--- a/Hyundai/index.html
+++ b/Hyundai/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#">신선식품</a></li>
                         <li><a href="#">건강 &#183; 다과 &#183; 장 &#183; 주류</a></li>
                     </ul>
-                    <div class="gnb_dropdown" style="display: none;">
+                    <div class="gnb_dropdown">
                         <div class="dropdown_menu">
                             <div class="etc_menu">
                                 <a href="#" class="etc_ico01">온라인 사전접수</a>
@@ -209,6 +209,132 @@
                     </div>  
                 </div>
             </div> 
+            <div class="section recomm_main">
+                <div class="inner">
+                    <h2>
+                        <img src="img/tit_main_recomm01.png" alt="추천메뉴">
+                    </h2>
+                    <div class="hashtag">
+                        <a href="#" class="on">#사랑하는 가족을 위한 선물</a>
+                        <a href="#">#가성비 좋은 실속 선물</a>
+                        <a href="#">#프리미엄 선물</a>
+                        <a href="#">#환경까지 생각하는 선물</a>
+                        <a href="#">#현대백화점에서만 만날 수 있는 선물</a>
+                        <a href="#">#SNS 인기아이템</a>
+                    </div>  
+                    <div class="prd_list">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/prd01.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">37-02</div>
+                                        <div class="name">현대화식 한우 국菊</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>460,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/prd02.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">47-0</div>
+                                        <div class="name">현대명품 샤인머스캣 &#183; 애플망고 세트</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>110,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/prd03.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">55-13</div>
+                                        <div class="name">영광 정성두름 참굴비 매梅</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>250,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/prd04.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">67-07</div>
+                                        <div class="name">향과집성방 상감둥시 세트</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>100,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/prd05.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">78-09</div>
+                                        <div class="name">수삼&#183;더덕&#183;산양삼 혼합 세트</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>260,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img">
+                                        <img src="img/prd06.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <div class="sticker">81-07</div>
+                                        <div class="name">정관장 홍삼정</div>
+                                        <div class="priceArea">
+                                            <div class="price">
+                                                <em>198,000</em>
+                                                원
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div> 
+                    <div class="btn_area">
+                        <a href="#" class="btn_more">
+                            <span>더 보러가기</span>
+                        </a>
+                    </div>  
+                </div>
+            </div>
         </div>
     </div>
 </body>
