--- a/Hyundai/index.html
+++ b/Hyundai/index.html
@@ -336,6 +336,18 @@
                 </div>
             </div>
         </div>
+        <footer id="footer" class="footer">
+            <div class="inner">
+                <div class="left">
+                    <img src="img/logo_footer.png" alt="더 현대">
+                    <p class="copyright">© HYUNDAI DEPARTMENT STORE. ALL RIGHTS RESERVED.</p>
+                </div>
+                <div class="right">   
+                    <img src="img/img_footer_link01.png" alt="현대닷컴 바로가기">
+                    <img src="img/img_footer_link02.png" alt="현대Mall 바로가기">
+                </div>    
+            </div>
+        </footer>
     </div>
 </body>
 </html>
