--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,13 +34,20 @@
                 </div>
             </div>
         </header>
-        <section class="home">
+        <section id="home">
            <div class="main_text">
-               <p class="typing">Welcome to my Portfolio</p>
+               <div class="typing_text">Welcome to my Portfolio.</div>
                <p class="sub_txt">웹 퍼블리셔 박준형의 포트폴리오 사이트입니다.</p>
-               <p class="sub_txt">포트폴리오 사이트에 방문해주셔서 감사합니다.</p>
+               <p class="sub_txt">방문해주셔서 감사합니다.</p>
            </div>
         </section>
+        <section id="home">
+            <div class="main_text">
+                <div class="typing_text">Welcome to my Portfolio.</div>
+                <p class="sub_txt">웹 퍼블리셔 박준형의 포트폴리오 사이트입니다.</p>
+                <p class="sub_txt">방문해주셔서 감사합니다.</p>
+            </div>
+         </section>
     </div>
 </body>
 </html>
