--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,11 +16,11 @@
             <div class="gnb_wrap">
                 <div class="gnb">
                     <ul>
-                        <li><a href="#" class="on">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Skill</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#home" class="on">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#skill">Skill</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="gnb_mobile">
@@ -41,11 +41,47 @@
                <p class="sub_txt">방문해주셔서 감사합니다.</p>
            </div>
         </section>
-        <section id="home">
-            <div class="main_text">
-                <div class="typing_text">Welcome to my Portfolio.</div>
-                <p class="sub_txt">웹 퍼블리셔 박준형의 포트폴리오 사이트입니다.</p>
-                <p class="sub_txt">방문해주셔서 감사합니다.</p>
+        <section id="about">
+            <h2>About</h2>
+            <div class="line"></div>
+            <h3>"저의 프로필, 이력 그리고 직무와 관련된 경험을 소개합니다."</h3>
+            <div class="about_wrap clearfix">
+                <div class="about_img">
+                    <img src="img/profile_2.jpg" alt="프로필 사진">
+                </div>
+                <div class="about_txt">
+                    <div class="profile">
+                        <h4>Profile</h4>
+                        <p>이름 : 박준형</p>
+                        <p>연락처 : 010.6***.0***</p>
+                        <p>나이 : 27세 (1994.10.21)</p>
+                        <p>E-mail : junhp1994@gmail.com</p>
+                    </div>
+                    <div class="history">
+                        <h4>History & Experience</h4>
+                        <p>2019.07 ~ 2020.01 : (주)제제컴즈 UI/UX 디자인팀 퍼블리셔 근무</p>
+                        <p>2019.05 ~ 2019.06 : 제튼(ZETTON) 홈페이지 UI/UX 디자인 및 퍼블리싱 [프로젝트]</p>
+                        <p>2019.04 ~ 2019.05 : (주)참빛파워텍 어플리케이션 아이콘 제작 [프로젝트]</p>
+                        <p>2019.03 ~ 2019.04 : 원공인중개사 홈페이지 UI/UX 디자인 [프로젝트]</p>
+                        <p>2019.02 ~ 2019.07 : 경기산업기술교육센터 웹콘텐츠디자인과 수료</p>
+                        <p>2013.03 ~ 2019.02 : 용인대학교 문화콘텐츠학과 졸업</p>
+                    </div>
+                    <div class="License">
+                        <h4>License</h4>
+                        <p>컴퓨터활용능력 1급</p>
+                        <p>GTQ 포토샵 1급</p>
+                        <p>웹디자인기능사 (필기)</p>
+                        <p>컴퓨터그래픽스운용기능사 (필기)</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <section id="skill">
+            <h2>Skill</h2>
+            <div class="line"></div>
+            <h3>"저의 프로필, 이력 그리고 직무와 관련된 경험을 소개합니다."</h3>
+            <div class="skill_wrap clearfix">
+                
             </div>
          </section>
     </div>
