--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -77,11 +77,71 @@
             </div>
          </section>
          <section id="skill">
-            <h2>Skill</h2>
-            <div class="line"></div>
-            <h3>"저의 프로필, 이력 그리고 직무와 관련된 경험을 소개합니다."</h3>
             <div class="skill_wrap clearfix">
-                
+                <div class="guage_wrap">
+                    <h2>Skill</h2>
+                    <div class="line"></div>
+                    <h3>"UI/UX에 대한 이해를 바탕으로 디자인하고,<br>웹 표준/접근성에 맞는 마크업을 통해 반응형 웹페이지를 제작합니다."</h3>
+                        <ul>
+                            <li>
+                                <p class="guage_txt clearfix">
+                                    HTML
+                                    <span>90%</span>
+                                </p>
+                                <div class="guage_bg">
+                                    <span class="guage"></span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="guage_txt clearfix">
+                                    CSS
+                                    <span>90/100</span>
+                                </p>
+                                <div class="guage_bg">
+                                    <span class="guage"></span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="guage_txt clearfix">
+                                    JAVASCRIPT
+                                    <span>90/100</span>
+                                </p>
+                                <div class="guage_bg">
+                                    <span class="guage"></span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="guage_txt clearfix">
+                                    Photoshop
+                                    <span>90/100</span>
+                                </p>
+                                <div class="guage_bg">
+                                    <span class="guage"></span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="guage_txt clearfix">
+                                    illustrator
+                                    <span>90/100</span>
+                                </p>
+                                <div class="guage_bg">
+                                    <span class="guage"></span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="guage_txt clearfix">
+                                    Adobe XD
+                                    <span>90/100</span>
+                                </p>
+                                <div class="guage_bg">
+                                    <span class="guage"></span>
+                                </div>
+                            </li>
+                        </ul>
+                </div>
+                <div class="skill_img">
+                    <p class="ir_su">이미지_스킬</p>
+                </div>
             </div>
          </section>
     </div>
