--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio_2020_Park</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/9aaeb1762e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="wrap">
@@ -167,6 +168,17 @@
                     <a href="#">Responsive</a>
                     <a href="#">App</a>
                 </div>
+                <div class="popup_wrap">
+                    <div class="popup">
+                        <i onclick="pop_close();">
+                            <span></span>
+                            <span></span>
+                        </i>
+                        <div class="pop_content">
+
+                        </div>        
+                    </div>
+                </div>
                 <div class="content_container clearfix">
                     <div class="content">
                         <div class="item">
@@ -246,7 +258,7 @@
                             <div class="item_cover">
                                 <div class="item_txt">
                                     <h4>Gabia</h4>
-                                    <p>#Common Web #카피 페이지 #퍼블리싱</p>
+                                    <p>#Common Web #카피페이지 #퍼블리싱</p>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +269,7 @@
                             <img class="item_img" src="img/pf_web05.png" alt="이미지">
                             <div class="item_cover">
                                 <div class="item_txt">
-                                    <h4>One-real estimate</h4>
+                                    <h4>One-real Estimate</h4>
                                     <p>#Responsive #프로젝트 #퍼블리싱</p>
                                 </div>
                             </div>
