--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -122,20 +122,11 @@
                             </li>
                             <li>
                                 <p class="guage_txt clearfix">
-                                    Photoshop
-                                    <span class="per">75 %</span>
+                                    Photoshop / illustrator
+                                    <span class="per">70 %</span>
                                 </p>
                                 <div class="guage_bg">
                                     <span class="guage gg04"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <p class="guage_txt clearfix">
-                                    illustrator
-                                    <span class="per">60 %</span>
-                                </p>
-                                <div class="guage_bg">
-                                    <span class="guage gg05"></span>
                                 </div>
                             </li>
                             <li>
